--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
 </head>
 <body>
     
+<div class="container">
+    <div class="calculator">
+        <form>
+            <div>
+                <input type="text" name="display">
+            </div>
+            <div>
+                <input type="button" value="AC">
+                <input type="button" value="DE">
+                <input type="button" value=".">
+                <input type="button" value="/">
+            </div>
+        </form>
+    </div>
+</div>
 
     <script src="script.js"></script>
 </body>
