--- a/index.html
+++ b/index.html
@@ -21,32 +21,32 @@
                 <input type="button" value="/" class="operator">
             </div>
             <div>
-                <input type="button" value="7">
-                <input type="button" value="8">
-                <input type="button" value="9">
-                <input type="button" value="x" class="operator">
+                <input type="button" value="7" >
+                <input type="button" value="8" >
+                <input type="button" value="9" >
+                <input type="button" value="*"  class="operator">
             </div>
             <div>
-                <input type="button" value="4">
-                <input type="button" value="5">
-                <input type="button" value="6">
+                <input type="button" value="4" >
+                <input type="button" value="5" >
+                <input type="button" value="6" >
                 <input type="button" value="-" class="operator">
             </div>
             <div>
-                <input type="button" value="1">
-                <input type="button" value="2">
+                <input type="button" value="1" >
+                <input type="button" value="2" >
                 <input type="button" value="3">
-                <input type="button" value="+" class="operator">
+                <input type="button" value="+"  class="operator">
             </div>
             <div>
-                <input type="button" value="00">
-                <input type="button" value="0">
-                <input type="button" class="equal operator" value="=">
+                <input type="button" value="00" >
+                <input type="button" value="0" >
+                <input type="button" class="equal operator" value="=" onclick="display.value = eval(display.value)">
             </div>
         </form>
     </div>
 </div>
 
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
