Added a div on how to use the calculator

--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
             </div>
         </form>
     </div>
+
+    <div class="usage-guide">
+        <h2>How to Use the Calculator</h2>
+        <p>1. Use the number buttons (0-9) to input your numbers.</p>
+        <p>2. Use the operator buttons (+, -, *, /) to perform calculations.</p>
+        <p>3. Press "AC" to clear the input.</p>
+        <p>4. Press "DE" to delete the last character in the input.</p>
+        <p>5. Press "=" to see the result of your calculation.</p>
+        <p>6. You can use "." to enter decimal numbers.</p>
+        <p>7. Make sure to use operators for multiple-step calculations.</p>
+    </div>
 </div>
 
     <script src="script.js"></script>
